--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <title>Flights</title>
-        <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
+<!--         <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css"> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
         <link href="styles/styles.css" rel="stylesheet" type="text/css">
     </head>        
     <body ng-app="myApp" ng-controller="homeController" class="body-container">
