--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.20/angular-ui-router.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+        <script src="https://code.angularjs.org/1.7.5/angular.js"></script>
         <link href="styles/styles.css" rel="stylesheet" type="text/css">
     </head>        
     <body ng-app="myApp" ng-controller="homeController" class="body-container">
